# Fenng

./: .gitignore  CMakeLists.txt  NOTICE  README.md
depends/glad/include/glad/: glad.h
depends/glad/src/: glad.c
include/: Application.hpp  ImageLoad.h  Memory.hpp  Resources.hpp  Settings.hpp  Shader.hpp  Texture.hpp  Time.hpp  Window.hpp
include/fennton/gl/: Window.hpp
include/fennton/grafik/: Exceptions.hpp  Shader.hpp  Time.hpp  Window.hpp
include/fennton/skript/: Parser.hpp
include/fennton/utils/: Console.hpp  Filesystem.hpp  Memory.hpp  Text.hpp
include/utils/: FileUtils.hpp  JSON.hpp  Misc.hpp
resources/: Cheat1.html  Cheat2-1.html  Cheat2.html  Editor1.html  settings.json
resources/shaders/: screen.frag  screen.vert
src/: Application.cpp  CMakeLists.txt  EntryPoint.cpp  ImageLoad.c  Resources.cpp  Settings.cpp  Shader.cpp  Texture.cpp  Texture.move.cpp  Time.cpp  Window.cpp
src/fennton/gl/: CMakeLists.txt  Window.cpp
src/fennton/grafik/: CMakeLists.txt  Shader.cpp  Time.cpp  Window.cpp
src/fennton/skript/: CMakeLists.txt  Parser.cpp
src/fennton/utils/: CMakeLists.txt  Console.cpp  Filesystem.cpp  Text.cpp
src/fennton/window/: CMakeLists.txt  Window.cpp
src/main/: CMakeLists.txt
src/utils/: FileUtils.cpp  JSON.cpp  Misc.cpp
tests/: CMakeLists.txt
tests/gui/resources/: Layout1.cak
tests/include/fennton/utils/: TextQuoteGenerated.hpp
tests/python/: TextQuote.py  TextQuote.txt  ZeroToSevenEscape.py  ZeroToSevenEscape.txt
tests/resources/: manual.json
tests/resources/models/: Pyramid_small.dae  Pyramid_small.fbx  Pyramid_small.mtl
tests/resources/shaders/: Matrix.frag  Matrix.vert  Rect.frag  Rect.vert  Texture.frag  Texture.vert
tests/results/window_manip/: 2025-08-14T21_46.txt
tests/src/fennton/gl/: CMakeLists.txt  Manipulation.cpp
tests/src/fennton/grafik/: CMakeLists.txt  Manipulation.cpp  MatrixTest.cpp  Rectangle.cpp  Shader.cpp  ShaderTest.cpp  TextureTest.cpp  TimeTest.cpp  Triangle.cpp  Uniform.cpp
tests/src/fennton/skript/: CMakeLists.txt  Expression.cpp  Tokeniser.cpp
tests/src/fennton/utils/: CMakeLists.txt  ConsoleEncoding.cpp  ConsoleInit.cpp  ConsolePrint.cpp  TextQuote.cpp
tests/src/fennton/window/: CMakeLists.txt  Manipulation.cpp
tests/src/gui/: CMakeLists.txt  Main.cpp
tests/src/window/: CMakeLists.txt  Main.cpp
tests/tts/resources/: Annotations.txt  History.txt  Input.txt  Phones.txt
